--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,8 @@ SOCKS_PROXY=
 # Processing settings
 STANDARDIZATION_BATCH_SIZE=50  # Оптимальный размер для стандартизации
 MAX_WORKERS=1
+# Группировка по ОКПД2 для оптимального кэширования
+ENABLE_OKPD_GROUPING=true  # Рекомендуется включить для экономии токенов
 
 # Rate limit settings
 RATE_LIMIT_DELAY=10  # Задержка между батчами в секундах
@@ -67,4 +69,5 @@ MAX_RETRIES=3  # Количество попыток при rate limit
 API_KEY=your_secure_api_key_here
 
 # Paths
+# Файл со стандартами ОКПД2 в новом формате (группировка по XX.XX)
 OKPD2_CHARACTERISTICS_PATH=src/data/okpd2_characteristics.json
